--- a/client/src/index.scss
+++ b/client/src/index.scss
@@ -108,6 +108,7 @@ div.cards {
   &:hover {
     box-shadow: 0 0 1em 0em #8bcefa;
     transition: 250ms;
+    cursor: pointer;
   }
 }
 
@@ -263,7 +264,7 @@ p.coinName {
 /* START BODY.JSX */
 
 div.bodyMain {
-  height: 43.5vh;
+  margin-top: 50px;
   display: flex;
   flex-direction: column;
   color: #e0f2fe;
@@ -397,17 +398,17 @@ footer a:hover {
   margin-left: 2rem;
 }
 
-.homeData > h3 {
-  
-}
 
-.graph-form > label {
-  color:#e0f2fe;
-}
 /* NEEDS TO BE STYLED */
 .graph-form {
   color: #333;
   text-align: right;
-  margin-left: 50%;
-  width: 30%;
+  width: 20%;
+}
+.graph-form > label {
+  color:#e0f2fe;
+}
+
+.loadHome {
+  margin-left: 40vw;
 }
